# agent-builder

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json
apps/api/: package.json  tsconfig.build.json  tsconfig.json
apps/api/scripts/: real-opencode-e2e.mjs
apps/api/src/: app.module.ts  main.ts
apps/web/: next.config.mjs  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/e2e/: global-setup.ts  global-teardown.ts  p0-flows.spec.ts  p1-flows.spec.ts
docker/: Dockerfile.api  Dockerfile.web
docs/prd/: PRD-v0.3-agent-builder.md
docs/technical/: agent_builder_architecture.md  architecture_clarity_review.md  openjiuwen_api_inventory.md  p0_acceptance_report.md  p0_implementation_plan.md  p1_implementation_report.md  p1_llm_opencode_execution_plan.md  p2_defects.md  p2_improvement_todo.md  p2_plan.md  p3_demo_runbook.md  p3_work_items.md  p4_work_items.md  p4_workflow_decision.md  runtime_and_sandbox.md
sandbox/: Dockerfile  README.md  opencode-config.json
services/openjiuwen-runtime/: pyproject.toml
services/openjiuwen-runtime/src/openjiuwen_runtime/: __init__.py
services/openjiuwen-runtime/tests/: test_runtime.py
services/python-runner/: pyproject.toml
services/python-runner/src/python_runner/: __init__.py  cli.py  health.py  mock_openjiuwen.py  runner.py
services/python-runner/tests/: test_health.py  test_mock_openjiuwen.py  test_runner.py
workspace/test-gen/: README.md
(+111 files in other folders)
