[project]
name = "openjiuwen-runtime"
version = "0.1.0"
description = "Lightweight ReAct Agent runtime adapter for Agent Builder sandbox."
requires-python = ">=3.10"
dependencies = ["openai>=1.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
